force-app/main/default/objects/Holder_Additional_Acc_Details__c/Holder_Additional_Acc_Details__c.object-meta.xml
<CustomObject>
    <label>Holder Additional Acc Details</label>
    <nameField>
        <label>Holder Additional Acc Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Additional Acc Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>