force-app/main/default/objects/Holder_Additional_Acc_Details__c/fields/Accessory__c.field-meta.xml
<CustomField>
    <fullName>Accessory__c</fullName>
    <label>Accessory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>