force-app/main/default/objects/Holder_Additional_Acc_Details__c/fields/Accessory_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Part_Number__c</fullName>
    <label>Accessory Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>