force-app/main/default/objects/Holder_Additional_Acc_Details__c/fields/NumVal1__c.field-meta.xml
<CustomField>
    <fullName>NumVal1__c</fullName>
    <label>NumVal1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>