force-app/main/default/objects/Holder_Additional_Acc_Details__c/fields/NumVal2__c.field-meta.xml
<CustomField>
    <fullName>NumVal2__c</fullName>
    <label>NumVal2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>