force-app/main/default/objects/Holder_Additional_Acc_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Scrap__c</columns>
    <columns>Accessory_Part_Number__c</columns>
    <columns>Scrap_Factor__c</columns>
    <columns>Accessory__c</columns>
    <columns>CDC_Ext_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Flag__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Qty_Per_Assembly__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>